--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@heroicons/react": "^2.0.12",
     "autoprefixer": "^10.4.12",
     "axios": "^1.1.2",
+    "date-fns": "^2.29.3",
+    "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.1",
     "next": "12.3.1",
     "postcss": "^8.4.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
